Update font size and position and fix image bug
lower body text in the card was too small. Made it bigger. Also fixed background image which was repeating.

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@ body, html {
 .flex-container-image {
     border-radius: 0px 10px 10px 0px;
     background: url(images/image-header-desktop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     position: relative;
     overflow: hidden;
     height: 60%;
@@ -61,7 +64,6 @@ body, html {
     color: hsla(0, 0%, 100%, 0.6);
     padding: 0px 0px 10px 60px;
     font-weight: 400;
-    font-size: 11px; /* Body text is protuding to the right past the title unlike the style guide */ 
     line-height: 1.8;
 }
 
@@ -83,12 +85,12 @@ body, html {
 }
 
 .content-lower-body h3{
-    font-size: 1em;
+    font-size: 1.5rem;
     line-height: 0.5;
     font-weight: 700;
     color: hsl(0, 0%, 100%);
     padding-left: 60px;
-    padding-top: 20px;
+    
 }
 
 .content-lower-body p{
